# translator

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: config.py  main.py
ui/: main.ui
